Fixed root report